[tool.poetry]
name = "basic-functions"
version = "0.1.0"
description = ""
authors = ["matq <mathieu.quilliec@gmail.com>"]
readme = "README.md"
packages = [{include = "basic_functions"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
